--- a/styles/contacts_details.css
+++ b/styles/contacts_details.css
@@ -55,6 +55,12 @@
   display: flex;
   flex-direction: column;
   gap: 21px;
+  transform: translateX(200%);
+  transition: transform 250ms linear;
+}
+
+.contact-details-show {
+  transform: translateX(0);
 }
 
 .contact-details-name-wrap {
